minor css alignment fixes to content and menu-button

--- a/src/app/components/post/post.component.less
+++ b/src/app/components/post/post.component.less
@@ -38,7 +38,9 @@
 	margin: 0 @s1 @s1 0;
 	// padding: 0 @s24 - @s1;
 }
-.post-content{}
+.post-content{
+	padding: 0;
+}
 .post-button{
 	.meta_Type();
 	display: flex;
