--- a/src/app/components/root/root-states.component.less
+++ b/src/app/components/root/root-states.component.less
@@ -32,13 +32,6 @@
 	overflow: auto;
 	z-index: 3;
 }
-.menu-button{
-	.absolute(0 null null 0);
-	margin: @s8*4 - 1;
-	// margin: @s8*5;
-
-	z-index: 4;
-}
 
 
 // MOBILE //
@@ -57,9 +50,6 @@
 	}
 	.post{}
 	.list{}
-	.menu-button{
-		margin: @s8*2.5;
-	}
 	.primary_Open(){}
 	.primary_Closed(){
 		transform: translateX(@column_Size);
